# track

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: config.py  main.py
api/routes/: auth.py  categories.py  notes.py  projects.py  tasks.py
api/schemas/dto/: auth.py  category.py  note.py  project.py  task.py
api/schemas/orm/: category.py  note.py  project.py  task.py  user.py
api/services/: ordering.py
api/utils/: auth.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: UserProfile.tsx
frontend/src/components/auth/: AgentAuth.tsx  AuthPage.tsx  Login.tsx  Register.tsx
frontend/src/components/categories/: CategoryFilter.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/notes/: NoteDetail.tsx  NoteList.tsx
frontend/src/components/projects/: ProjectFilter.tsx
frontend/src/components/tasks/: StatusHistory.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx  TaskResearch.tsx  TaskSteps.tsx
frontend/src/context/: AppContext.tsx  AuthContext.tsx  NoteContext.tsx  TaskContext.tsx
frontend/src/types/: index.ts
mcp/: README.md  __init__.py  main.py
mcp/oauth/: __init__.py  models.py  routes.py  schemas.py
mcp/tools/: notes.py  projects.py  tasks.py
mcp/utils/: __init__.py  auth.py
scripts/: migrate_category_to_project.py  migrate_to_email_login.py
